--- a/css/attractions.css
+++ b/css/attractions.css
@@ -5,7 +5,7 @@
 }
 
 #attraction-h2 {
-    color: beige;
+    color: snow;
     text-align: left;
     margin: 1em 0 .25em 0;
     padding: 5px 0 0 15px;
