--- a/css/types.css
+++ b/css/types.css
@@ -4,12 +4,13 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-#typeinfo-h2 {
-    color: beige;
+#typeinfo {
+    color: snow;
     text-align: left;
     margin: 1em 0 .25em 0;
     padding: 5px 0 0 15px;
     text-shadow: 2px 2px 8px #000000;
     font-size: 2.5em;
     font-family: "Mouse Memoirs", sans-serif;
+    text-transform: capitalize;
 }
